Tfeat(template-service): V1.1 umgesetzt (JWT/IAM, Locale-Resolve, unveränderliche Versionen, Rendering-Regeln, Governance, Paging/Fehler)